deploy: b0335d28419f10ab559e7beb9754c9cec4209de5

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MOOSHAK | Lightway and Easy to setup SSH Tunnel proxy",
-  "short_name": "MOOSHAK | Lightway and Easy to setup SSH Tunnel proxy",
+  "name": "Mooshak",
+  "short_name": "Mooshak",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
