feat: improved ownership of important shell scripts

--- a/server/mooshak/Dockerfile
+++ b/server/mooshak/Dockerfile
@@ -8,5 +8,6 @@ COPY files/adduser.sh /
 COPY files/deleteuser.sh /
 COPY files/sshd_config /etc/ssh/sshd_config
 COPY files/banner /etc/motd
+RUN chmod 750 / && chown -R root /entrypoint.sh && chown -R root /adduser.sh && chown -R root /deleteuser.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
